--- a/src/pages/research/viruses.astro
+++ b/src/pages/research/viruses.astro
@@ -9,7 +9,7 @@ const relevantPapers = publications.filter((paper) =>
 );
 ---
 
-<ResearchLayout title="Viruses, Viral Genomics and Immunopeptidomics">
+<ResearchLayout title="Viruses, Viral Genomics, and Immunopeptidomics">
     <div slot="abstract" class="grid gap-2">
         <p>Coming soon!</p>
     </div>
