--- a/src/pages/research/bioinformatics-gwas.astro
+++ b/src/pages/research/bioinformatics-gwas.astro
@@ -9,7 +9,7 @@ const relevantPapers = publications.filter((paper) =>
 );
 ---
 
-<ResearchLayout title="Istrail Lab | Bioinformatics and GWAS">
+<ResearchLayout title="Bioinformatics and GWAS">
     <div slot="abstract" class="grid gap-2">
         <p>Coming soon!</p>
     </div>
