--- a/src/pages/research/regulatory-genome.astro
+++ b/src/pages/research/regulatory-genome.astro
@@ -10,7 +10,7 @@ const relevantPapers = publications.filter((paper) =>
 ---
 
 <ResearchLayout
-    title="Istrail Lab | The Regulatory Genome, Gene Regulatory Networks and Transcriptomics"
+    title="The Regulatory Genome, Gene Regulatory Networks and Transcriptomics"
 >
     <div slot="abstract" class="grid gap-2">
         <p>Coming soon!</p>
