--- a/src/pages/research/snp-haplotypes.astro
+++ b/src/pages/research/snp-haplotypes.astro
@@ -9,9 +9,7 @@ const relevantPapers = publications.filter((paper) =>
 );
 ---
 
-<ResearchLayout
-    title="Istrail Lab | The Regulatory Genome, Gene Regulatory Networks and Transcriptomics"
->
+<ResearchLayout title="SNPs and Haplotypes">
     <div slot="abstract" class="grid gap-2">
         <p>Coming soon!</p>
     </div>
