--- a/src/pages/research/protein-folding.astro
+++ b/src/pages/research/protein-folding.astro
@@ -9,7 +9,7 @@ const relevantPapers = publications.filter((paper) =>
 );
 ---
 
-<ResearchLayout title="Istrail Lab | Protein Folding Algorithms">
+<ResearchLayout title="Protein Folding Algorithms">
     <div slot="abstract" class="grid gap-2">
         <p>Coming soon!</p>
     </div>
